[metadata]
name = by
version = 0.0.7
url = https://github.com/t-c-w/by
platforms = any
description_file = README.md
license = mit
author = Thor Whalen
description = selection tools
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		matching
		pairs
		intervals
		selection
		nearest neighbors
display_name = by

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy
	scikit-learn

